--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "next",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "MINJE-98",
+    "email": "minje9801@gmail.com",
+    "url": "https://www.github.com/MINJE-98"
+  },
+  "engines": {
+    "node": "16.17.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
