--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,13 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "@Library/*": ["lib/*", "lib/"],
+      "@Commons/*": ["src/components/@Commons/*"],
+      "@Models/*": ["src/components/@Models/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
