--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "postcss-preset-env": "^7.8.2",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.0",
     "typescript": "4.8.4"
   }
 }
