--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -68,6 +68,7 @@
         }
       }
     ],
+    "react/no-unknown-property": ["off", { "ignore": ["css", "tw"] }],
     "import/no-cycle": "off",
     "no-console": "warn",
     "prettier/prettier": "warn",
