--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,11 @@
 {
-  "singleQuote": false,
+  "arrowParens": "avoid",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "printWidth": 80,
   "semi": true,
-  "useTabs": false,
+  "singleQuote": false,
   "tabWidth": 2,
-  "printWidth": 80
+  "trailingComma": "all",
+  "useTabs": false
 }
